--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello world 21861111_정지우
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>콘텐츠 프로그래밍 사이트</title>
+        <meta charset="utf-8" />
+        <!-- utf-8, euc-kr -->
+        <meta name-"auctor" content="정지우" />
+        <meta name-"keywords" content+"계원, 콘텐츠 프로그래밍, 디지털미디어" />
+    </head>
+    <body>
+
+    </body>
+</html>
+
+
+
+
+
+
+
+<a href="https://www.naver.com" target="_blank">네이버가기</a>
+<br />
