--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name-"keywords" content+"계원, 콘텐츠 프로그래밍, 디지털미디어" />
     </head>
     <body>
-
+        <a href="training.html">HTML연습</a>
     </body>
 </html>
 
