--- a/html_part1.html
+++ b/html_part1.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>자신의 주제명</title>
+        <title>박찬욱 감독 영화</title>
+        <meta charset="utf-8" />
+        <meta name-"auctor" content="정지우" />
+        <meta name-"keywords" content+"박찬욱, 영화" />
     </head>
     <body>
+            <a href="index.html">연습 페이지</a>
+            <a href="training.html">첫수업시간 기초</a>
+                <!-- ????? 돌아오기 -->
+
+        <!-- h1~h6 제목, 순번x, 깊이(depth)o -->
+        <h1>박찬욱 감독 영화</h1>
+        <hr />
+        <h2>올드보이</h2>
+        <h3>최민식, 유지태, 강혜정</h3>
+        <hr />
+        <h2>친절한금자씨</h2>
+        <h3>이영애, 최민식</h3>
+        <hr />
+        <h2>아가씨</h2>
+        <h3>김민희, 김태리</h3>
+        <hr />
+        <h2>박쥐</h2>
+        <h3>송강호, 김옥빈</h3>
+        <hr />
+
         
     </body>
+    <br />
+    박찬욱의 영화는 극단적으로 과장된 감정과 냉정한 표현의 결합, 블랙코미디와 아이러니, 표현주의적인 화면 구성, 금기의 위반, 잔혹한 폭력 묘사 등이 자주 발견되며,
+    <br />
+    여기서 인간의 본성과 죄의식을 탐구하고 있다.
+    <br />
+    이런 점들 때문에 그의 영화가 나올 때마다 찬반 의견이 극명하게 갈린다.
+    <br />
+    프랑스 영화 잡지 카예 뒤 시네마는 홍상수와 봉준호의 영화를 높게 평가하는 반면 박찬욱의 영화들에는 매번 혹평을 남기고 있다.
+    <br />
+    거의 모든 영화에서 여성 캐릭터가 핵심적으로 등장한다. 친절한 금자씨, 스토커, 아가씨, 리틀 드러머 걸 처럼 여성이 이야기를 중심적으로 이끌어가는 영화들이 상당수이기도 하다.
+    <br />
+    이에 대해서 박찬욱은 올드보이에서 미도 캐릭터를 유일하게 끝내 진실에서 소외된 채로 퇴장하는 인물로 그렸던게 마음에 걸려 친절한 금자씨를 기획하게 되었고,
+    <br />
+    이후 여성 캐릭터에 관심이 많아졌다고 밝힌 바 있다.
+    <br />
+    부모와 자식 간의 관계가 묘사될 때 자식은 대부분 딸이라는 점도 발견된다. 아들이 나오는 작품은 <CUT>과 <박쥐> 정도.
+        <br />
+        <br />
+                <!-- 이미지 표시하는 태그 src="주소" -->
+                <img src="금자1.jpg" />
+                <img src="금자2.jpg" />
+                <img src="미도1.jpg" />
+                <img src="미도2.jpg" />
+                <img src="태주1.jpg" />
+                <img src="태주2.jpg" />
+                <img src="아가씨1.jpg" />
 </html>
