--- a/training.html
+++ b/training.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
+        <a href="html_part1.html">돌아오기</a>
         <!-- ????? 돌아오기 -->
 
         <!-- h1~h6 제목, 순번x, 깊이(depth)o -->
@@ -20,7 +21,7 @@
         <h2>강원도</h2>
         <h1>미국</h1>
         <h1>중국</h1>
-        <h1>일본</h1>s
+        <h1>일본</h1>
 
         <!-- anchor 닺 특정지점으로 이동하는 기점 -->
         <a href="https://www.google.com" target-"_blank">구글가기</a>
