--- a/html_part1.html
+++ b/html_part1.html
@@ -34,7 +34,7 @@
     <br />
     여기서 인간의 본성과 죄의식을 탐구하고 있다.
     <br />
-    이런 점들 때문에 그의 영화가 나올 때마다 찬반 의견이 극명하게 갈린다.
+    이런 점들 때문에 그의 영화가 나올 때마다 찬반 의견이 극명하게 갈린다.ㅇ
     <br />
     프랑스 영화 잡지 카예 뒤 시네마는 홍상수와 봉준호의 영화를 높게 평가하는 반면 박찬욱의 영화들에는 매번 혹평을 남기고 있다.
     <br />
@@ -55,4 +55,95 @@
                 <img src="태주1.jpg" />
                 <img src="태주2.jpg" />
                 <img src="아가씨1.jpg" />
+
+                 <!-- table, tr, td -->
+    <style>
+            table, tr, td {border:solid 1px black; }
+        </style>
+        <!-- summary 요약, caption 표제-->
+        <table>
+            <caption>박찬욱영화</caption>
+            <!-- thead, tbody, tfood -->
+            <!-- scope 초점, 망원경 -->
+            <thead>
+            <tr>
+                <th><scope"co1">친절한금자씨</th>
+                <th><scope"co1>올드보이</th>
+                <th><scope"co1">박쥐</th>
+                <th><scope"co1">아가씨</th>
+                <th><scope"co1">복수는나의것</th>
+            </tr>
+        </thead>
+            <!-- tr 한줄, td 한칸 -->
+            <tbody>
+            <tr>
+                <!-- colspan 가로(열)늘이기,
+                    rowspan 세로(행)늘이기 -->
+                <td>금자</td>
+                <td>미도</td>
+                <td>태주</td>
+                <td>히데코</td>
+                <td>동진</td>
+            </tr>
+            <tr>
+                <td>백선생</td>
+                <td>오대수</td>
+                <td>상현</td>
+                <td>숙희</td>
+                <td>류</td>
+            </tr>
+            <tr>
+                    <td>제니</td>
+                    <td>이우진</td>
+                    <td>라여사</td>
+                    <td>백작</td>
+                    <td>영미</td>
+            </tr>
+            <tr>
+                    <td>근식</td>
+                    <td>경호실장</td>
+                    <td>강우</td>
+                    <td>코우즈키</td>
+                    <td>류 누나</td>
+            </tr>
+            <tr>
+                    <td>최반장</td>
+                    <td>철웅</td>
+                    <td>노신부</td>
+                    <td>사사키부인</td>
+                    <td>유선</td>
+            </tr>
+            <tbody/>
+        </table>
+    
+        <!-- div, span 분할 -->
+        <!-- 의미없이 쓰기 좋은 태그들 -->
+        <!-- 블록형 -->
+        <div>박찬욱 영화에 대해 알아보았습니다.</div>
+        <!-- 인라인형 -->
+        <span>감사합니다.</span>
+
+        <style>
+                table{
+                    border: 1px solid black;
+                }
+                td{
+                    border: 1px solid black;
+                }
+            </style>
+            <table>
+                <tr>
+                    <td colspan=2>up</td>
+                    <td rowspan=2>right</td>
+                </tr>
+                <tr>
+                    <td rowspan=4>left</td>
+                    <td>center</td>
+                </tr>
+                <tr>
+                    <td colspan=2>down</td>
+                </tr>
+            </table>
+
+    </body>
 </html>
