--- a/html_part1.html
+++ b/html_part1.html
@@ -34,7 +34,7 @@
     <br />
     여기서 인간의 본성과 죄의식을 탐구하고 있다.
     <br />
-    이런 점들 때문에 그의 영화가 나올 때마다 찬반 의견이 극명하게 갈린다.ㅇ
+    이런 점들 때문에 그의 영화가 나올 때마다 찬반 의견이 극명하게 갈린다.
     <br />
     프랑스 영화 잡지 카예 뒤 시네마는 홍상수와 봉준호의 영화를 높게 평가하는 반면 박찬욱의 영화들에는 매번 혹평을 남기고 있다.
     <br />
