--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <a href="html_part1.html">돌아오기</a>
         <a href="training.html">HTML연습</a>
+        <a href="html5.html">html5</a>
+        <a href="form.html">폼</a>
     </body>
 </html>
 
