--- a/html_part1.html
+++ b/html_part1.html
@@ -9,6 +9,7 @@
     <body>
             <a href="index.html">연습 페이지</a>
             <a href="training.html">첫수업시간 기초</a>
+            <a href="cheeze.html">중간고사</a>
                 <!-- ????? 돌아오기 -->
 
         <!-- h1~h6 제목, 순번x, 깊이(depth)o -->
