--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="training.html">HTML연습</a>
         <a href="html5.html">html5</a>
         <a href="form.html">폼</a>
+        <a href="cheeze.html">중간고사</a>
     </body>
 </html>
 
