--- a/layout1.html
+++ b/layout1.html
@@ -8,6 +8,9 @@
                 /* border: solid 1px black; /* 경계선 긋기 */
                 /* margin: 10px; /* 서로간에 여유공간 만들기 */
             }
+            header{
+                padding: 10px 50px; /* 상하 좌우 */
+            }
             header>ul>li{
                 float:left; /*둥둥 떠다니게 : 왼쪽 기준으로 ( 너무 자주 쓰는건 비추 ) */
                 list-style:none; /* 목록-모습(동그라미) : 없음 */
@@ -55,7 +58,8 @@
                 margin: 8px;
             }
             nav{
-                background-color:#ddd
+                background-color:#ddd;
+                padding: 10px 50px;
             }
             #content>div:nth-child(1){
                 background-color:#98f;
@@ -91,7 +95,52 @@
                     width: 1020px;
                     margin-left: 180px; /* 고정값 */
                     margin-left: auto; /* 가변값 */
-                    margin-right: auto; /* 가변값 */
+                    margin-right: auto;
+                    
+                    padding: 50px 0px; /* 상하 좌우 */
+                }
+                footer{
+                    background-color: #555;
+                    color: #ccc;
+
+                    padding: 10px 50px;
+                }
+                footer>div>ul>li{
+                    float:left;
+                    list-style: none;
+                    padding: 0px 10px; /* 상하 좌우 */
+
+                    border-right: solid 2px gray;
+                }
+                footer>div>ul>li:nth-child(6){
+                    border: none;
+                }
+                footer>div>ul{
+                    padding:0px;
+                }
+                footer>ul>li{
+                    float: left;
+                    list-style: none;
+                    padding: 0px 10px; /*상하 좌우 */
+                }
+                footer>ul{
+                    padding:0px;
+                }
+                #footer_left{
+                    float: left;
+                }
+                #footer_right{
+                    float: right;
+                }
+                #wrap{
+                    /* width: 1200px; 고정값 */
+                    min-width: 1100px; /*최소넓이*/
+                    max-width: 1920px; /*최대넓이*/
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                body{
+                    margin: 0px;
                 }
         </style>
     </head>
@@ -276,7 +325,36 @@
                     </section>
                 </div>
             </div>
-            <footer>footer</footer>
-        </div>
+            <footer>
+                <div id="footer_left">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Work</li>
+                    <li>Blog</li>
+                    <li>Contact us</li>
+                    <div class="clear"></div> <!-- float left 해제-->
+                </ul>
+                <div id="copyright">ⓒ 2013 BlueBox. All Right Reserved.</div>
+                <div id="footer_right">
+                    the loges in the design are the property
+                    of their respective owners/copyright
+                    holders.
+                </div>
+            </div>
+            <ul id="footer_right"> <!-- 오른편 상자 역할-->
+                <li><img src="images/layout1_footer_icon1.png"></li>
+                <li><img src="images/layout1_footer_icon2.png"></li>
+                <li><img src="images/layout1_footer_icon3.png"></li>
+                <li><img src="images/layout1_footer_icon4.png"></li>
+                <li><img src="images/layout1_footer_icon5.png"></li>
+                <li><img src="images/layout1_footer_icon6.png"></li>
+                <div class="clear"></div> <!-- float left 해제-->
+
+            </ul>
+            <div class="clear"></div> <!-- float left 해제-->
+        </footer>
+    </div>
     </body>
 </html>
