--- a/layout3.html
+++ b/layout3.html
@@ -37,6 +37,24 @@
                 #footer_right{
                     float: right;
                 }
+                #wrap{
+                    /* width: 1200px; 고정값 */
+                    min-width: 1800px; /*최소넓이*/
+                    max-width: 2000px; /*최대넓이*/
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                body{
+                    margin: 0px;
+                }
+                nav>ul>li>a{
+                    text-decoration: none;
+                }
+                #content {
+                    text-align: center;
+                    color:rgb(0, 0, 0);
+                    font-size: 17px;
+                }
         body{
             background-image: url("images/layout3_back.jpg")
         }
