--- a/layout1.html
+++ b/layout1.html
@@ -200,6 +200,14 @@
                 body{
                     margin: 0px;
                 }
+                nav>ul>li>a{
+                    text-decoration: none;
+                }
+                #content {
+                    text-align: center;
+                    color:rgb(0, 0, 0);
+                    font-size: 17px;
+                }
         </style>
     </head>
     <body>
